--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,8 +11,15 @@
   <nav>
     <a href="/pins">Pins</a>
     <%= link_to "Create new pin", new_pin_path %>
+    <% if current_user %>
+      <h3><%= link_to 'Signout', destroy_user_session_path, :method => :delete %></h3>
+    <% else %>
+      <h3><%= link_to 'Signup', new_user_registration_path %></h3>
+      <h3><%= link_to 'Login', new_user_session_path %></h3>
+    <% end %>
   </nav>
 </header>
+
   <p class="notice"><%= notice %></p>
   <p class="alert"><%= alert %></p>
 <%= yield %>
