--- a/app/views/boards/index.html.erb
+++ b/app/views/boards/index.html.erb
@@ -1,1 +1,7 @@
-hello
+<h1>Boards</h1>
+<%if(current_user) %>
+  <h2>Your Boards</h2>
+  <% current_user.boards.each do |board| %>
+  <%= link_to board.title, board %>
+  <% end %>
+<% end %>
