--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,8 +9,9 @@
 <body>
 <header>
   <nav>
-    <a href="/pins">Pins</a>
-  
+    <a href="/boards">Boards</a>
+    <%= link_to "Create Board", new_board_path %>
+
     <% if current_user %>
       <h3><%= link_to 'Signout', destroy_user_session_path, :method => :delete %></h3>
     <% else %>
