--- a/app/views/pins/edit.html.erb
+++ b/app/views/pins/edit.html.erb
@@ -1,5 +1,5 @@
 <h2>Edit Pin</h2>
 <%= render partial: "form" %>
-<%= form_for @pin, method: :delete do |f| %>
+<%= form_for [@board, @pin], method: :delete do |f| %>
   <%= f.submit "Delete", class: "delete" %>
 <% end %>
