--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,37 @@
  *= require_tree .
  *= require_self
  */
+
+body {
+  margin: 0 auto;
+}
+ nav {
+   background-color: black;
+   color: white;
+   overflow: auto;
+ }
+
+ nav a {
+   color: white;
+   float: right;
+   padding: 5px;
+   margin-top: 15px;
+ }
+
+ a:hover {
+   color:red;
+ }
+
+ .title {
+   float: left;
+   margin-left: 10px;
+ }
+
+
+ li {
+   list-style-type: none;
+ }
+
+.info {
+  text-align: center;
+}
