--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,20 +10,23 @@
 <header>
   <nav>
     <a href="/boards">Boards</a>
+    <h1 class='title'>Pinspiration</h1>
     <%= link_to "Create Board", new_board_path %>
 
     <% if current_user %>
-      <h3><%= link_to 'Signout', destroy_user_session_path, :method => :delete %></h3>
+      <%= link_to 'Signout', destroy_user_session_path, :method => :delete %>
     <% else %>
-      <h3><%= link_to 'Signup', new_user_registration_path %></h3>
-      <h3><%= link_to 'Login', new_user_session_path %></h3>
+      <%= link_to 'Signup', new_user_registration_path %>
+      <%= link_to 'Login', new_user_session_path %>
     <% end %>
   </nav>
 </header>
 
+<div class='info'>
   <p class="notice"><%= notice %></p>
   <p class="alert"><%= alert %></p>
 <%= yield %>
+</div>
 
 </body>
 </html>
