--- a/app/views/pins/index.html.erb
+++ b/app/views/pins/index.html.erb
@@ -6,7 +6,12 @@
 
 <%if(current_user) %>
   <h2>Your Pins</h2>
-  <% current_user.pins.each do |pin| %>
+  <% @pins.each do |pin| %>
   <%= link_to image_tag(pin.image_url), pin %>
   <% end %>
+<% end %>
+
+<%= form_tag '', :method => :get do %>
+  <%= text_field_tag :name %>
+  <%= submit_tag 'Filter' %>
 <% end %>
