--- a/app/views/boards/show.html.erb
+++ b/app/views/boards/show.html.erb
@@ -1,10 +1,14 @@
 <h1><%= @board.title %></h1>
-<%= link_to "(edit)", edit_board_path(@board) %>
 
-<%= link_to "Create Pin", new_board_pin_path(@board) %>
+<% if current_user == @board.user %>
+  <%= link_to "(edit)", edit_board_path(@board) %>
+  <%= link_to "Create Pin", new_board_pin_path(@board) %>
+<% end %>
 
 <% @board.pins.each do |pin| %>
   <%= pin.title %>
-  <%= link_to "(edit)", edit_board_pin_path(@board,pin) %>
-  <%= image_tag(pin.image_url) %>
+  <% if current_user == @board.user %>
+    <%= link_to "(edit)", edit_board_pin_path(@board,pin) %>
+  <% end %>
+  <%= link_to image_tag(pin.image_url), pin_path(pin) %>
 <% end %>
